--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -24,6 +24,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, rem = divmod(26, 26)\n",
+    "print(n, rem)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
